network_services_authorization_rbac/network/yamls_labs/default_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
spec:
  podSelector: {} #aplica pra todos os pods do namespace
  policyTypes:
  - Ingress
  ingress:
  - {}
