network_services_authorization_rbac/network/yamls_labs/network_policy_pod_selector.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-pod-c
spec:
  podSelector:
    matchLabels:
      run: pod-c
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: pod-a
    ports:
    - protocol: TCP
      port: 80
